# b16converter

./: .gitignore  .gitmodules  LICENSE  README.md  TEST.BMX  Vagrantfile  bitmapx16.cpp  bitmapx16.h  main.cpp  meson.build  meson.options  output.cpp  output.h  palette.cpp  palette.h  test.sh  win32compat.h
.github/workflows/: linux.yml  test.yml  win.yml
